# waw

./: Cargo.toml  README.md  build.rs  justfile  rust-toolchain.toml
.github/workflows/: rust.yml
example/: demo.json  demo.wasm  demo.yaml
src/: context.rs  engine.rs  lib.rs  main.rs  value.rs  workflow.rs  workflow_engine.rs
