[package]
name = "waw"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
wasmtime = { version = "32.0" }
wasmtime-wasi = "32.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "2.0.12"
